🗑️ (agent): Remove redundant blank lines and replace List#index access with List#getFirst